fix(database): WIP - changing entities
